<resources>
    <string name="app_name">Code Red</string>
    <string name="registration_for_self">Registration For Self</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="take_help">Take Help</string>
    <string name="recent_status_of_covid_19_confirmed_patient">Recent status of COVID-19 confirmed patient</string>
    <string name="time">Time</string>
    <string name="age">Age</string>
    <string name="area">Area</string>
    <string name="need_assistance_about_covid_19_for">Need assistance for COVID-19</string>
    <string name="registration_for_others">Registration For Others</string>

    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reg_string"><![CDATA[Register for tentative COVID-19 diagnosis & sending SOS signal]]></string>
    <string name="permission_for_reg">By clicking continue, you agree to our Terms Of Service and our Privacy Policy.</string>
    <string name="forget_password"><u>Forgot your password?</u></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="report_for_covid_19_case">Report for COVID-19 Case</string>
    <string name="patient_name">Patient Name</string>
    <string name="location">Location</string>
    <string name="report_description">Report Description</string>
    <string name="press_and_hold_the_sos_button_for_3_seconds">Press and Hold the SOS button for 3 seconds!</string>
    <string name="return_to_home">Return to Home</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="create_new">
        <u>Don\'t have an account?</u>
    </string>
    <string name="already_have_an_account">
      <u>Already have an account?</u>
    </string>
    <string name="others">Others</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="to_get_assistance_please_answer_these_questions_carefully">To get assistance please answer these questions carefully</string>

</resources>
