<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tarmsbd.schoolofthought.codered.app.data.viewmodel.AuthViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.AuthActivity">

        <!--main ui-->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <!--registration for help button-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="Login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

                <!--mobile number-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="12dp"
                    app:boxCornerRadiusBottomEnd="32dp"
                    app:boxCornerRadiusBottomStart="32dp"
                    app:boxCornerRadiusTopEnd="32dp"
                    app:boxCornerRadiusTopStart="32dp"
                    app:hintEnabled="false"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:paddingStart="32dp"
                        android:text="@={viewModel.mobile}" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--full name-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    app:boxCornerRadiusBottomEnd="32dp"
                    app:boxCornerRadiusBottomStart="32dp"
                    app:boxCornerRadiusTopEnd="32dp"
                    app:boxCornerRadiusTopStart="32dp"
                    app:hintEnabled="false"
                    app:hintTextColor="@color/black"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingStart="32dp"
                        android:text="@={viewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--task help button-->
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:minWidth="200dp"
                    android:onClick="@{(v)->viewModel.loginUser(v)}"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    app:cornerRadius="18dp" />

                <!--task help button-->
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/register"
                    android:layout_marginTop="32dp"
                    android:minWidth="200dp"
                    android:text="or, Create New"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="18dp" />

                <!--reset password-->
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/forget_password"
                    android:textAllCaps="false" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>